Placed all elements of address footer inside a single <tr> <td> tags.

--- a/index.html
+++ b/index.html
@@ -257,17 +257,13 @@
                     <!--------------------------------------------------------- Spacer -->
 
                     <tr>
-                        <td height="60" style="background-color: #1c022f;"></td>
-                    </tr>
-
-                    <tr>
                         <td align="center" valign="top" style="background-color: #1c022f;">
-                            <img alt="logo" src="images/logo-white.png">
-                        </td>
-                    </tr>
+                            <span style="margin-top: 60px; display: block;"></span>
 
-                    <tr>
-                        <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
+                            <img alt="logo" src="images/logo-white.png">
+
+                            <span style="margin-top: 20px; display: block;"></span>
+
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
                                 <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Los Angeles</a> <br>
                                 <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">4551 Glencoe Avenue</a> <br>
@@ -275,11 +271,9 @@
                                 <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Marina del Rey, CA 90292</a> <br>
                                 <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(310) 751 4158</a>
                             </p>
-                        </td>
-                    </tr>
 
-                    <tr>
-                        <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
+                            <span style="margin-top: 20px; display: block;"></span>
+
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
                                 <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">New York</a> <br>
                                 <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">25 Broadway</a> <br>
@@ -287,11 +281,9 @@
                                 <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">New York, NY 10004</a> <br>
                                 <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(646) 602 9727</a>
                             </p>
-                        </td>
-                    </tr>
 
-                    <tr>
-                        <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
+                            <span style="margin-top: 20px; display: block;"></span>
+
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
                                 <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">London</a> <br>
                                 <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Suncourt House, Level 3,</a> <br>
@@ -299,11 +291,9 @@
                                 <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">London N1 8LN</a> <br>
                                 <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +44 (0)749 502 2208</a>
                             </p>
-                        </td>
-                    </tr>
 
-                    <tr>
-                        <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
+                            <span style="margin-top: 20px; display: block;"></span>
+
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
                                 <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Santo Domingo</a> <br>
                                 <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Edificio Corporativo</a> <br>
@@ -312,11 +302,9 @@
                                 <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Santo Domingo, Dominican Republic</a> <br>
                                 <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(809) 562 6921</a>
                             </p>
-                        </td>
-                    </tr>
 
-                    <tr>
-                        <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
+                            <span style="margin-top: 20px; display: block;"></span>
+
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
                                 <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Sydney</a> <br>
                                 <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Level 4, 100 Harris St,</a> <br>
@@ -325,11 +313,9 @@
                                 <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Australia</a> <br>
                                 <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +61 433 782 076</a>
                             </p>
-                        </td>
-                    </tr>
 
-                    <tr>
-                        <td height="60" style="background-color: #1c022f;"></td>
+                            <span style="margin-top: 60px; display: block;"></span>
+                        </td>
                     </tr>
 
                     <!--------------------------------------------------------- Spacer -->
