Fix js youtube anchor link by adding https:// protocol. - This will fix the link not rendering on yahoo and outlook mail.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <p>Whether you have existing video assets, or are looking to create an original animated
                                 spot, our team of talented designers and producers will create action-driving YouTube
                                 video ads tailored to your brand needs. Check out some of our work here:</p>
-                            <p><a href="joystickinteractive.com/youtube"
+                            <p><a href="https://www.joystickinteractive.com/youtube"
                                     style="color: #6EE5B9;">joystickinteractive.com/youtube</a></p>
                         </td>
                     </tr>
