Implement design changes - Agree with Kirk, assets look a little pixelated. - Footer Locations (eg: Los Angeles, New York, etc) should be in Playfair Display font specifically Playfair Display italic at 14pt. - Joystick logo looks a little blurry on mobile as well. - Might be a little nitpicky but could we add a little more space between the end of the sentence and big header title eg: "joystickinteractive.com/youtube" and “Kim Havens joins as VP…” - Are we using the correct font for the headers? Should be Raleway Bold at 18 pt. And for the italic headers should be Playfair Display italic at 18pt. - Same thing with footer location font.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Joystick Internal Email</title>
 
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Playfair+Display:200i|Raleway:700|Roboto&display=swap');
+        @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400i|Raleway:700|Roboto&display=swap');
         /* Some resets and issue fixes */
         #outlook a {
             padding: 0;
@@ -55,8 +55,7 @@
                 <table border="0" cellpadding="0" cellspacing="0">
                     <tr>
                         <td align="center" valign="top">
-                            <img alt="logo" class="mobile-center"
-                                src="images/logo.jpg">
+                            <img alt="logo" src="images/logo.jpg" width="174" height="59">
                         </td>
                     </tr>
                 </table>
@@ -74,7 +73,7 @@
 
                     <tr>
                         <td align="center" valign="top"
-                            style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
+                            style="font-family: 'Raleway', sans-serif; font-size: 1.75em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
                             <span>
                                 Your Trusted <br> YouTube Creative Partner
                             </span>
@@ -122,13 +121,13 @@
 
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
-                        <td height="20"></td>
+                        <td height="80"></td>
                     </tr>
                     <!--------------------------------------------------------- Spacer -->
 
                     <tr>
                         <td align="center" valign="top"
-                            style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
+                            style="font-family: 'Raleway', sans-serif; font-size: 1.75em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
                             <span>
                                 Kim Havens joins as <br> VP, Content Production
                             </span>
@@ -178,7 +177,7 @@
 
                     <tr>
                         <td align="center" valign="top"
-                            style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
+                            style="font-family: 'Raleway', sans-serif; font-size: 1.75em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
                             <span>
                                 Much more to come!
                             </span>
@@ -240,11 +239,11 @@
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
                         <td align="center" valign="top">
-                            <span style="font-family: 'Playfair Display', serif; font-size: 2.25em; color: #000000;">
-                                <i>Get in touch,</i>
+                            <span style="font-family: 'Playfair Display', serif; font-size: 1.75em; color: #000000;">
+                                Get in touch,
                             </span> <br>
                             <span
-                                style="font-family: 'Raleway', sans-serif; font-size: 2.25em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
+                                style="font-family: 'Raleway', sans-serif; font-size: 1.75em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
                                 We'd love to hear from you
                             </span>
                         </td>
@@ -260,58 +259,58 @@
                         <td align="center" valign="top" style="background-color: #1c022f;">
                             <span style="margin-top: 60px; display: block;"></span>
 
-                            <img alt="logo" src="images/logo-white.png">
+                            <img alt="logo" src="images/logo-white.png" width="134" height="19">
 
                             <span style="margin-top: 20px; display: block;"></span>
 
-                            <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Los Angeles</a> <br>
-                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">4551 Glencoe Avenue</a> <br>
-                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Suite 330</a> <br>
-                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Marina del Rey, CA 90292</a> <br>
-                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(310) 751 4158</a>
+                            <p style="font-family: 'Roboto', sans-serif; line-height: 1; color: #FFFFFF; margin: 0;">
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;">Los Angeles</a> <br>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">4551 Glencoe Avenue</a> <br>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Suite 330</a> <br>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Marina del Rey, CA 90292</a> <br>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +(310) 751 4158</a>
                             </p>
 
                             <span style="margin-top: 20px; display: block;"></span>
 
-                            <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">New York</a> <br>
-                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">25 Broadway</a> <br>
-                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">5th Floor</a> <br>
-                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">New York, NY 10004</a> <br>
-                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(646) 602 9727</a>
+                            <p style="font-family: 'Roboto', sans-serif; line-height: 1; color: #FFFFFF; margin: 0;">
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;">New York</a> <br>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">25 Broadway</a> <br>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">5th Floor</a> <br>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">New York, NY 10004</a> <br>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +(646) 602 9727</a>
                             </p>
 
                             <span style="margin-top: 20px; display: block;"></span>
 
-                            <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">London</a> <br>
-                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Suncourt House, Level 3,</a> <br>
-                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">18-26 Essex Road,</a> <br>
-                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">London N1 8LN</a> <br>
-                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +44 (0)749 502 2208</a>
+                            <p style="font-family: 'Roboto', sans-serif; line-height: 1; color: #FFFFFF; margin: 0;">
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;">London</a> <br>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Suncourt House, Level 3,</a> <br>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">18-26 Essex Road,</a> <br>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">London N1 8LN</a> <br>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +44 (0)749 502 2208</a>
                             </p>
 
                             <span style="margin-top: 20px; display: block;"></span>
 
-                            <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Santo Domingo</a> <br>
-                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Edificio Corporativo</a> <br>
-                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Av. Gustavo Mejia Ricart No. 102 Esq. Ave.</a><br>
-                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Abraham Lincoln, Suite 303</a> <br>
-                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Santo Domingo, Dominican Republic</a> <br>
-                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(809) 562 6921</a>
+                            <p style="font-family: 'Roboto', sans-serif; line-height: 1; color: #FFFFFF; margin: 0;">
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;">Santo Domingo</a> <br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Edificio Corporativo</a> <br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Av. Gustavo Mejia Ricart No. 102 Esq. Ave.</a><br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Abraham Lincoln, Suite 303</a> <br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Santo Domingo, Dominican Republic</a> <br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +(809) 562 6921</a>
                             </p>
 
                             <span style="margin-top: 20px; display: block;"></span>
 
-                            <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Sydney</a> <br>
-                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Level 4, 100 Harris St,</a> <br>
-                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Pyrmont,</a> <br>
-                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Sydney NSW 2009,</a> <br>
-                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Australia</a> <br>
-                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +61 433 782 076</a>
+                            <p style="font-family: 'Roboto', sans-serif; line-height: 1; color: #FFFFFF; margin: 0;">
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;">Sydney</a> <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Level 4, 100 Harris St,</a> <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Pyrmont,</a> <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Sydney NSW 2009,</a> <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Australia</a> <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +61 433 782 076</a>
                             </p>
 
                             <span style="margin-top: 60px; display: block;"></span>
