Updated copy and added links to joystick logo.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <table border="0" cellpadding="0" cellspacing="0">
                     <tr>
                         <td align="center" valign="top">
-                            <img alt="logo" src="images/logo.jpg" width="174" height="59">
+                            <a href="http://joystickinteractive.com/" target="_blank"><img alt="logo" src="images/logo.jpg" width="174" height="59"></a>
                         </td>
                     </tr>
                 </table>
@@ -155,10 +155,10 @@
                     <tr>
                         <td valign="top"
                             style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5; color: #000000;">
-                            <p>Kim Havens comes to us from Lions Gate with a difficult-to-find combination of skill
-                                sets: deep knowledge of the art of storytelling combined with a broader digital savvy
-                                that make her invaluable to clients. She's already been adding value to our work on
-                                several fronts with clients and partners, not to mention our YouTube partnership.</p>
+                            <p>Entertainment and content guru Kim Havens joins us from the likes of Lionsgate, FX, and Disney with 
+                                a difficult-to-find combination of skill sets: deep knowledge of the art of storytelling combined with a 
+                                broader digital savvy that make her invaluable to clients. She’s already been adding value to our work 
+                                on several fronts with clients and partners, not to mention our YouTube partnership.</p>
                             <p>Welcome!</p>
                         </td>
                     </tr>
@@ -259,7 +259,7 @@
                         <td align="center" valign="top" style="background-color: #1c022f;">
                             <span style="margin-top: 60px; display: block;"></span>
 
-                            <img alt="logo" src="images/logo-white.png" width="134" height="19">
+                            <a href="http://joystickinteractive.com/" target="_blank"><img alt="logo" src="images/logo-white.png" width="134" height="19"></a>
 
                             <span style="margin-top: 20px; display: block;"></span>
 
